tests/NormalTests/paczka1/fuzzy1/89527261.err
Error in line 1: 0yvOk1v A336 33,1
Error in line 2: 0yvOk1v A886 9,9
Error in line 11: A886 A886 45,4
Error in line 21: 5oEAgakW A996 4,6
Error in line 16: DZKZxwUQX A886 38,5
Error in line 14: A886 S453 13,1
Error in line 20: bGM9y75L A996 87,6
Error in line 38: j1yD Ahh6 311,1
Error in line 37: bGM9y75L A33 7,5
